# QuadroBank

./: .gitignore  CMakeLists.txt  test.sqlite
backend/account/: account_controller.cpp  account_controller.h  account_repository_db.cpp  account_repository_db.h  account_repository_in_memory.cpp  account_repository_in_memory.h  account_repository_interface.h  account_service.cpp  account_service.h  account_specification.h
backend/account/dto/: account_authorize_dto.h  account_balance_dto.h  account_transfer_dto.h  account_update_dto.h  session_dto.h  session_token_dto.h  token_dto.h
backend/account/model/: account.h
backend/auth/: auth_service.cpp  auth_service.h
backend/communication/: backend_communication.h
backend/db/: db_service.cpp  db_service.h  specification.h
backend/db/specifications/: accounts_debtor_at_time_specification.h  deposit_variants_all_specification.h  deposits_all_except_this_specification.h  deposits_before_time_specification.h  deposits_by_card_number_specification.h  rps_all_except_this_specification.h  rps_by_card_number_specification.h  rps_time_passed_specification.h  specification.h
backend/deposit/: deposit_controller.cpp  deposit_controller.h  deposit_repository_db.cpp  deposit_repository_db.h  deposit_repository_in_memory.cpp  deposit_repository_in_memory.h  deposit_repository_interface.h  deposit_service.cpp  deposit_service.h  deposit_variant_repository_db.cpp  deposit_variant_repository_db.h  deposit_variant_repository_in_memory.cpp  deposit_variant_repository_in_memory.h  deposit_variant_repsitory_interface.h
backend/deposit/dto/: deposit_create_dto.h  deposit_dto.h  deposit_variant_dto.h
backend/deposit/model/: deposit.h
backend/deposit_variant/: deposit_variant_repository_db.h  deposit_variant_repository_in_memory.h  deposit_variant_repsitory_interface.h
backend/deposit_variant/model/: deposit_variant.h
backend/log/: log_service.cpp  log_service.h
backend/notification/: notification_service.cpp  notification_service.h
backend/regular_payment/: regular_payment_controller.cpp  regular_payment_controller.h  regular_payment_repository_db.cpp  regular_payment_repository_db.h  regular_payment_repository_in_memory.cpp  regular_payment_repository_in_memory.h  regular_payment_repository_interface.h  regular_payment_service.cpp  regular_payment_service.h
backend/regular_payment/dto/: regular_payment_create_dto.h  regular_payment_delete_dto.h  regular_payment_dto.h  regular_payment_get_dto.h  regular_payment_update_dto.h
backend/regular_payment/model/: regular_payment.h
backend/scheduler/: scheduler.cpp  scheduler.h
backend/token/: token_service.cpp  token_service.h
backend/user/: user_repository_db.cpp  user_repository_db.h  user_repository_in_memory.cpp  user_repository_in_memory.h  user_repository_interface.h
backend/user/model/: user.h
backend/user_service/: user_repository.h  user_service.h
backend/utils/: exception.h  non_copying.h  optional.h  response.h  singleton.h  string_convert.h  time_intervals.h
backend/utils/cypher/: cypher_interface.h  xor_cypher.h
backend/utils/exceptions/: another_account_rp_deletion_exception.h  blocked_card_exception.h  credit_card_balance_exception.h  deposit_for_credit_exception.h  exception.h  illegal_percentage_exception.h  illegal_pin_exception.h  internal_db_error.h  internal_error.h  no_such_card_exception.h  no_such_rp_exception.h  no_such_target_account_exception.h  no_such_user_exception.h  non_positive_number_exception.h  not_enough_money_exception.h  past_date_exception.h  same_account_exception.h  simple_card_balance_exception.h  unauthorized_exception.h
frontend/: demo_account.h  demo_credit_scheduler.h  demo_cypher.h  demo_deposit_scheduler.h  demo_regular_payment_scheduler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/actions/: account_actions.h  deposit_actions.h  regular_payment_actions.h
frontend/communication/: frontend_communication.h
frontend/menus/DepositsMenu/: depositsmenu.cpp  depositsmenu.h  depositsmenu.ui  depositsmenu.ui.autosave
frontend/menus/LoginMenu/: loginmenu.cpp  loginmenu.h  loginmenu.ui  loginmenu.ui.autosave
frontend/menus/MainMenu/: mainmenu.cpp  mainmenu.h  mainmenu.ui
frontend/menus/NewDepositMenu/: newdepositmenu.cpp  newdepositmenu.h  newdepositmenu.ui
frontend/menus/NewPaymentMenu/: newpaymentmenu.cpp  newpaymentmenu.h  newpaymentmenu.ui
frontend/menus/PaymentsMenu/: paymentsmenu.cpp  paymentsmenu.h  paymentsmenu.ui
frontend/menus/RefillMenu/: refillmenu.cpp  refillmenu.h  refillmenu.ui
frontend/menus/TransferMenu/: transfermenu.cpp  transfermenu.h  transfermenu.ui
frontend/menus/UpdatePaymentMenu/: updatepaymentmenu.cpp  updatepaymentmenu.h  updatepaymentmenu.ui
frontend/menus/WithdrawMenu/: withdrawmenu.cpp  withdrawmenu.h  withdrawmenu.ui
frontend/menus/utils/: date_util.h  info_message.cpp  info_message.h  object_ui.h  token_menu_interface.h
frontend/menus/utils/amount_converter/: amount_convert.cpp  amount_convert.h
frontend/menus/utils/date_utils/: date_util.cpp  date_util.h
frontend/menus/utils/info_message/: info_message.cpp
frontend/menus/utils/token_menu_interface/: token_menu_interface.cpp  token_menu_interface.h
frontend/menus/utils/update_balance_label/: balance_label_util.cpp  balance_label_util.h
